--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@
     ;
   }
 /* comparison table- layout*/
-  #comparison { 
+  #comparison{ 
     display: flex;
     justify-content: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -131,7 +131,23 @@
     font-weight: lighter;
   }
 
-  #comparison td {
+  #comparison td{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: small;
+  }
+
+  #comparison #Bamboo {
+    visibility: visible;
+  }
+
+  #comparison #Hemp {
+    visibility: visible;
+  }
+
+  #comparison #Cork {
+    visibility: visible;
+  }
+
+  #comparison #Cotton {
+    visibility: visible;
   }
